<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_explore"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/bottom_nav_products"
        android:icon="@drawable/ic_local_mall_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/bottom_nav_shops"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/title_shops" />
    <item
        android:id="@+id/bottom_nav_map"
        android:icon="@drawable/ic_pin_drop_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/bottom_nav_hamburger"
        android:icon="@drawable/ic_dehaze_black_24dp"
        android:title=""

        ></item>

</menu>
